--- a/easymessage/WebContent/pages/js/template/push_msg_list_template.html
+++ b/easymessage/WebContent/pages/js/template/push_msg_list_template.html
@@ -73,7 +73,7 @@
 								<option value="0">선택</option>
 								<option value="1">발송상태</option>
 								<option value="2">수신번호</option>
-								<option value="3">응답상태</option>
+
 
 							</select>
 							<div class="clearfix"></div>
@@ -95,17 +95,17 @@
 								</select>
 							</div>
 
-							<div class="clearfix"></div>
+							<!-- 							<div class="clearfix"></div> -->
 
-							<div id="msg-list-ack-status-div" style="display: none;">
-								<label>응답상태 선택</label> <select class="form-control"
-									id="msg-list-search-ack-select">
-									<option value="0">응답없음</option>
-									<option value="1">수신확인</option>
-									<option value="2">메시지확인</option>
+							<!-- 							<div id="msg-list-ack-status-div" style="display: none;"> -->
+							<!-- 								<label>응답상태 선택</label> <select class="form-control" -->
+							<!-- 									id="msg-list-search-ack-select"> -->
+							<!-- 									<option value="0">응답없음</option> -->
+							<!-- 									<option value="1">수신확인</option> -->
+							<!-- 									<option value="2">메시지확인</option> -->
 
-								</select>
-							</div>
+							<!-- 								</select> -->
+							<!-- 							</div> -->
 						</div>
 						<div class="form-group">
 							<div class="clearfix"></div>
@@ -141,9 +141,11 @@
 									<thead>
 										<tr>
 											<th>발송시간</th>
-											<th>발송번호</th>
 											<th>수신번호</th>
 											<th>발송상태</th>
+											<th>반복시간</th>
+											<th>반복횟수</th>
+											<th>내용</th>
 											<th></th>
 											<!-- 											<th>반복횟수</th> -->
 											<!-- 											<th>반복시간</th> -->
@@ -190,13 +192,12 @@
 									class="table table-striped  table-hover" width="100%;">
 									<thead>
 										<tr>
+											<th>수신번호</th>
 											<th>수신확인</th>
 											<th>수신확인시간</th>
 											<th>메시지확인</th>
 											<th>메시지확인시간</th>
-											<th>반복횟수</th>
-											<th>반복시간</th>
-											<th>메시지내용</th>
+
 										</tr>
 									</thead>
 
@@ -232,12 +233,12 @@
 													<div class="widget-body">
 														<div class="widget-main">
 															<div class="form-group">
-																	<i class="ace-icon fa fa-caret-right blue"></i><label>Ptalk 유형 선택 : </label> <label>Ptalk1.0</label> <input
-																	type="radio" name="resend-pnum-radio"
-																	id="resend-pnum-p1-radio" value="82" checked="checked">
-																&nbsp;<label>Ptalk2.0</label> <input type="radio"
-																	name="resend-pnum-radio" id="resend-pnum-p2-radio"
-																	value="01">
+																<i class="ace-icon fa fa-caret-right blue"></i><label>Ptalk
+																	유형 선택 : </label> <label>Ptalk1.0</label> <input type="radio"
+																	name="resend-pnum-radio" id="resend-pnum-p1-radio"
+																	value="82" checked="checked"> &nbsp;<label>Ptalk2.0</label>
+																<input type="radio" name="resend-pnum-radio"
+																	id="resend-pnum-p2-radio" value="01">
 															</div>
 
 															<div class="form-group">
@@ -251,8 +252,8 @@
 
 															<div class="form-group">
 																<i class="ace-icon fa fa-caret-right blue"></i> <label>개별
-																	번호 </label><br>
-																<span style="font-size: x-small; font-weight: bold;">(개별
+																	번호 </label><br> <span
+																	style="font-size: x-small; font-weight: bold;">(개별
 																	번호를 입력한 후 플러스(+)버튼을 누르세요!)</span>
 																<div class="input-group">
 																	<input maxlength="6" type="text" class="form-control"
@@ -265,7 +266,8 @@
 															<div class="form-group"
 																id="msg-resend-user-target-show-div"
 																style="display: none;">
-																<i class="ace-icon fa fa-caret-right blue"></i>	<label>수신 무전번호 목록 </label><br>
+																<i class="ace-icon fa fa-caret-right blue"></i> <label>수신
+																	무전번호 목록 </label><br>
 																<textarea class="form-control"
 																	id="msg-resend-user-target-show-input"
 																	disabled="disabled"></textarea>
@@ -316,4 +318,6 @@
 
 			<!--row-->
 		</div>
-		<!--page Content-->
+	</div>
+</div>
+<!--page Content-->
